--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -11,18 +11,35 @@
     
     
     <Grid>
-        <local:PixelRuler 
+        <local:Ruler 
+            IsVerticalRuler="False"
             HorizontalAlignment = "Stretch" 
             VerticalAlignment = "Top"
             ScaleMarkPosition = "50"
             RulerLength = "1000"
-            SmallDividerLength = "5"
-            LargeDividerLength = "10"
-            RulerWidth = "50"
+            RulerWidth = "20"            
             PixelsPerUnit = "10"
             UnitsPerScale = "5"
+            SmallDividerLength = "7"
+            LargeDividerLength = "18"
             BackgroundColor = "White"
-            DividerColor = "Gray"
+            DividerColor = "Black"
+            TextColor = "Black"
+            />
+
+        <local:Ruler 
+            IsVerticalRuler="True"
+            HorizontalAlignment = "Left" 
+            VerticalAlignment = "Stretch"
+            ScaleMarkPosition = "50"
+            RulerLength = "1000"
+            RulerWidth = "20"            
+            PixelsPerUnit = "10"
+            UnitsPerScale = "5"
+            SmallDividerLength = "7"
+            LargeDividerLength = "18"
+            BackgroundColor = "White"
+            DividerColor = "Black"
             TextColor = "Black"
             />
 
