--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -8,60 +8,89 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    
-    
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" />
+        </Grid.ColumnDefinitions>
 
-        <local:Grid
-            x:Name="WFGrid"
-            GridWidth="300" 
-            GridHeight="300"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            PixelsPerUnit="10" 
-            UnitsPerScale = "5"
-            SnapToSubDivider="True"
-            CursorStartX="50"
-            CursorStartY="50"
-            BackgroundColor="Black" 
-            DividerColor="#1F1F1F"
-            SubDividerColor="#0F0F0F"/>
+        <StackPanel Grid.Column="0" Background="Black" Width="100">
+            
+            <Button Margin="10" Background="#0F0F0F" Foreground="White" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="75">
+                Hello
+            </Button>
 
-        <local:Ruler 
-            x:Name="WFHorizontalRuler"
-            HorizontalRuler="Visible"
-            VerticalRuler="Collapsed"
-            HorizontalAlignment = "Stretch" 
-            VerticalAlignment = "Top"
-            ScaleMarkPosition = "50"
-            RulerLength = "1000"
-            RulerWidth = "20"            
-            PixelsPerUnit = "10"
-            UnitsPerScale = "5"
-            SmallDividerLength = "7"
-            LargeDividerLength = "20"
-            BackgroundColor = "Black"
-            DividerColor = "White"
-            TextColor = "White"/>
+            <Button Margin="10" Background="#0F0F0F" Foreground="White" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="75">
+                World
+            </Button>
 
-        <local:Ruler 
-            x:Name="WFVerticalRuler"
-            HorizontalRuler="Collapsed"
-            VerticalRuler="Visible"
-            HorizontalAlignment = "Left" 
-            VerticalAlignment = "Stretch"
-            ScaleMarkPosition = "50"
-            RulerLength = "1000"
-            RulerWidth = "20"            
-            PixelsPerUnit = "10"
-            UnitsPerScale = "5"
-            SmallDividerLength = "7"
-            LargeDividerLength = "20"
-            BackgroundColor = "Black"
-            DividerColor = "White"
-            TextColor = "White"/>
+        </StackPanel>
+    
+        <Grid Grid.Column="1">
+            
+            <local:Grid
+                x:Name="WFGrid"
+                GridWidth="300" 
+                GridHeight="300"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                PixelsPerUnit="10" 
+                UnitsPerScale = "5"
+                SnapToSubDivider="True"
+                CursorStartX="50"
+                CursorStartY="50"
+                BackgroundColor="Black" 
+                DividerColor="#1F1F1F"
+                SubDividerColor="#0F0F0F"/>
 
-        
+            <local:Ruler 
+                x:Name="WFHorizontalRuler"
+                HorizontalRuler="Visible"
+                VerticalRuler="Collapsed"
+                HorizontalAlignment = "Stretch" 
+                VerticalAlignment = "Top"
+                ScaleMarkPosition = "50"
+                RulerLength = "1000"
+                RulerWidth = "20"            
+                PixelsPerUnit = "10"
+                UnitsPerScale = "5"
+                SmallDividerLength = "7"
+                LargeDividerLength = "20"
+                BackgroundColor = "Black"
+                DividerColor = "White"
+                TextColor = "White"/>
+
+            <local:Ruler 
+                x:Name="WFVerticalRuler"
+                HorizontalRuler="Collapsed"
+                VerticalRuler="Visible"
+                HorizontalAlignment = "Left" 
+                VerticalAlignment = "Stretch"
+                ScaleMarkPosition = "50"
+                RulerLength = "1000"
+                RulerWidth = "20"            
+                PixelsPerUnit = "10"
+                UnitsPerScale = "5"
+                SmallDividerLength = "7"
+                LargeDividerLength = "20"
+                BackgroundColor = "Black"
+                DividerColor = "White"
+                TextColor = "White"/>
+
+        </Grid>
+
+        <StackPanel Grid.Column="2" Background="Black" Width="300">
+
+            <TextBlock Margin="10" Foreground="White" HorizontalAlignment="Stretch" Height="75" TextAlignment="Center" Padding="10" FontSize="20">
+                Panel
+            </TextBlock>
+
+            <Button Margin="10" Background="#0F0F0F" Foreground="White" HorizontalAlignment="Stretch" Height="75">
+                Hello
+            </Button>
+
+        </StackPanel>
 
     </Grid>
 </Page>
