--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -9,86 +9,117 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="Auto" />
-        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
 
-        <StackPanel Grid.Column="0" Background="Black" Width="100">
+        <StackPanel Grid.Row="0">
             
-            <Button Margin="10" Background="#0F0F0F" Foreground="White" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="75">
-                Hello
-            </Button>
+            <StackPanel Orientation="Horizontal" Background="Black">
+                <Button HorizontalAlignment="Left" VerticalAlignment="Stretch" Width="100" Background="#0F0F0F" Foreground="White" FontSize="14" BorderThickness="0">
+                    Home
+                </Button>
+                <Button HorizontalAlignment="Left" VerticalAlignment="Stretch" Width="100" Background="Black" Foreground="White" FontSize="14" BorderThickness="0">
+                    Create
+                </Button>
+            </StackPanel>
 
-            <Button Margin="10" Background="#0F0F0F" Foreground="White" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="75">
-                World
-            </Button>
-
+            <StackPanel Height="100" Background="#0F0F0F">
+                
+            </StackPanel>
+            
         </StackPanel>
-    
-        <Grid Grid.Column="1" BorderBrush="White" BorderThickness="1">
+
+        <Grid Grid.Row="1" Background="Black">
             
-            <local:Grid
-                x:Name="WFGrid"
-                GridWidth="300" 
-                GridHeight="300"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Top"
-                PixelsPerUnit="10" 
-                UnitsPerScale = "5"
-                SnapToSubDivider="True"
-                CursorStartX="50"
-                CursorStartY="50"
-                BackgroundColor="Black" 
-                DividerColor="#1F1F1F"
-                SubDividerColor="#0F0F0F"/>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
 
-            <local:Ruler 
-                x:Name="WFHorizontalRuler"
-                HorizontalRuler="Visible"
-                VerticalRuler="Collapsed"
-                HorizontalAlignment = "Stretch" 
-                VerticalAlignment = "Top"
-                ScaleMarkPosition = "50"
-                RulerLength = "1000"
-                RulerWidth = "20"            
-                PixelsPerUnit = "10"
-                UnitsPerScale = "5"
-                SmallDividerLength = "7"
-                LargeDividerLength = "20"
-                BackgroundColor = "Black"
-                DividerColor = "White"
-                TextColor = "White"/>
+            <StackPanel Grid.Column="0" Background="Black" Width="100">
+            
+                <Button Background="#0F0F0F" Foreground="White" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="75">
+                    Hello
+                </Button>
 
-            <local:Ruler 
-                x:Name="WFVerticalRuler"
-                HorizontalRuler="Collapsed"
-                VerticalRuler="Visible"
-                HorizontalAlignment = "Left" 
-                VerticalAlignment = "Stretch"
-                ScaleMarkPosition = "50"
-                RulerLength = "1000"
-                RulerWidth = "20"            
-                PixelsPerUnit = "10"
-                UnitsPerScale = "5"
-                SmallDividerLength = "7"
-                LargeDividerLength = "20"
-                BackgroundColor = "Black"
-                DividerColor = "White"
-                TextColor = "White"/>
+                <Button Background="#0F0F0F" Foreground="White" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="75">
+                    World
+                </Button>
+
+            </StackPanel>
+    
+            <Grid Grid.Column="1" BorderBrush="White" BorderThickness="1">
+            
+                <local:Grid
+                    x:Name="WFGrid"
+                    GridWidth="300" 
+                    GridHeight="300"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Top"
+                    PixelsPerUnit="10" 
+                    UnitsPerScale = "5"
+                    SnapToSubDivider="True"
+                    CursorStartX="50"
+                    CursorStartY="50"
+                    BackgroundColor="Black" 
+                    DividerColor="#1F1F1F"
+                    SubDividerColor="#0F0F0F"/>
+
+                <local:Ruler 
+                    x:Name="WFHorizontalRuler"
+                    HorizontalRuler="Visible"
+                    VerticalRuler="Collapsed"
+                    HorizontalAlignment = "Stretch" 
+                    VerticalAlignment = "Top"
+                    ScaleMarkPosition = "50"
+                    RulerLength = "1000"
+                    RulerWidth = "20"            
+                    PixelsPerUnit = "10"
+                    UnitsPerScale = "5"
+                    SmallDividerLength = "7"
+                    LargeDividerLength = "20"
+                    BackgroundColor = "Black"
+                    DividerColor = "White"
+                    TextColor = "White"/>
+
+                <local:Ruler 
+                    x:Name="WFVerticalRuler"
+                    HorizontalRuler="Collapsed"
+                    VerticalRuler="Visible"
+                    HorizontalAlignment = "Left" 
+                    VerticalAlignment = "Stretch"
+                    ScaleMarkPosition = "50"
+                    RulerLength = "1000"
+                    RulerWidth = "20"            
+                    PixelsPerUnit = "10"
+                    UnitsPerScale = "5"
+                    SmallDividerLength = "7"
+                    LargeDividerLength = "20"
+                    BackgroundColor = "Black"
+                    DividerColor = "White"
+                    TextColor = "White"/>
+
+            </Grid>
+
+            <StackPanel Grid.Column="2" Background="Black" Width="300">
+
+                <TextBlock Margin="10" Foreground="White" HorizontalAlignment="Stretch" Height="75" TextAlignment="Center" Padding="10" FontSize="20">
+                    Panel
+                </TextBlock>
+
+                <Button Margin="10" Background="#0F0F0F" Foreground="White" HorizontalAlignment="Stretch" Height="75">
+                    Hello
+                </Button>
+
+            </StackPanel>
 
         </Grid>
 
-        <StackPanel Grid.Column="2" Background="Black" Width="300">
-
-            <TextBlock Margin="10" Foreground="White" HorizontalAlignment="Stretch" Height="75" TextAlignment="Center" Padding="10" FontSize="20">
-                Panel
-            </TextBlock>
-
-            <Button Margin="10" Background="#0F0F0F" Foreground="White" HorizontalAlignment="Stretch" Height="75">
-                Hello
-            </Button>
+        <StackPanel Grid.Row="2" Orientation="Horizontal" Height="50" Background="Black">
 
         </StackPanel>
 
