added canvas layout

--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -8,7 +8,13 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid>
+    <ScrollViewer ZoomMode="Enabled" MinZoomFactor="0.1" MaxZoomFactor="100" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalScrollBarVisibility="Auto" Background="LightGray">
 
-    </Grid>
+        <Border HorizontalAlignment="Center" VerticalAlignment="Center" Width="602" Height="402" Background="DarkGray" BorderThickness="1" BorderBrush="Aqua">
+            
+            <Canvas HorizontalAlignment="Left" VerticalAlignment="Top" Width="600" Height="400" Background="White" />
+            
+        </Border>
+
+    </ScrollViewer>
 </Page>
