--- a/WFCanvas.xaml
+++ b/WFCanvas.xaml
@@ -9,7 +9,7 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <Canvas Background="White">
+    <Canvas x:Name="_canvas" Background="White">
 
     </Canvas>
 
