--- a/WFCanvas.xaml
+++ b/WFCanvas.xaml
@@ -9,12 +9,20 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <Canvas x:Name="_canvas" Background="White">
+    <ScrollViewer x:Name="_scrollViewer" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalScrollBarVisibility="Auto" ZoomMode="Disabled">
 
-        <Ellipse x:Name="_ellipse" Canvas.Left="10" Canvas.Top="10" Stroke="Orange" Fill="LightSalmon" Width="250" Height="250" />
+        <Grid x:Name="_grid" Width="{x:Bind GridWidth, Mode=OneWay}" Height="{x:Bind GridHeight, Mode=OneWay}" Background="Gray">
 
-        <Rectangle x:Name="_rectangle" Canvas.Left="4740" Canvas.Top="3790" Stroke="Pink" Fill="LightPink" Width="1250" Height="200" />
+            <Canvas x:Name="_canvas" Width="{x:Bind CanvasWidth, Mode=OneWay}" Height="{x:Bind CanvasHeight, Mode=OneWay}" HorizontalAlignment="Center" VerticalAlignment="Center" Background="White">
 
-    </Canvas>
+                <Ellipse x:Name="_ellipse" Canvas.Left="10" Canvas.Top="10" Stroke="Orange" Fill="LightSalmon" Width="250" Height="250" />
+
+                <Rectangle x:Name="_rectangle" Canvas.Left="4740" Canvas.Top="3790" Stroke="Pink" Fill="LightPink" Width="1250" Height="200" />
+
+            </Canvas>
+
+        </Grid>
+
+    </ScrollViewer>
 
 </UserControl>
