--- a/WFCanvas.xaml
+++ b/WFCanvas.xaml
@@ -9,15 +9,15 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <ScrollViewer x:Name="_scrollViewer" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalScrollBarVisibility="Auto" ZoomMode="Disabled" Background="Black">
+    <ScrollViewer x:Name="_scrollViewer" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalScrollBarVisibility="Auto" ZoomMode="Enabled" Background="Gray">
 
-        <Grid x:Name="_grid" Width="{x:Bind Path=GridWidth, Mode=OneWay}" Height="{x:Bind Path=GridHeight, Mode=OneWay}" Background="Gray">
+        <Grid x:Name="_grid" Width="{x:Bind Path=GridWidth, Mode=OneWay}" Height="{x:Bind Path=GridHeight, Mode=OneWay}" Background="DarkGray">
 
             <Canvas x:Name="_canvas" Width="{x:Bind Path=CanvasWidth, Mode=OneWay}" Height="{x:Bind Path=CanvasHeight, Mode=OneWay}" HorizontalAlignment="Center" VerticalAlignment="Center" Background="White">
 
-                <Ellipse x:Name="_ellipse" Canvas.Left="10" Canvas.Top="10" Stroke="Orange" Fill="LightSalmon" Width="250" Height="250" />
+                <Ellipse x:Name="_ellipse" Canvas.Left="562" Canvas.Top="0" Stroke="Orange" Fill="LightSalmon" Width="562" Height="1218" />
 
-                <Rectangle x:Name="_rectangle" Canvas.Left="340" Canvas.Top="379" Stroke="Pink" Fill="LightPink" Width="1250" Height="200" />
+                <Rectangle x:Name="_rectangle" Canvas.Left="0" Canvas.Top="0" Stroke="Pink" Fill="LightPink" Width="281" Height="609" />
 
             </Canvas>
 
