--- a/WFCanvas.xaml
+++ b/WFCanvas.xaml
@@ -11,17 +11,11 @@
 
     <ScrollViewer x:Name="_scrollViewer" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalScrollBarVisibility="Auto" ZoomMode="Enabled" Background="Gray">
 
-        <Grid x:Name="_grid" Width="{x:Bind Path=GridWidth, Mode=OneWay}" Height="{x:Bind Path=GridHeight, Mode=OneWay}" Background="DarkGray">
+        <Canvas x:Name="_canvas" Width="{x:Bind Path=CanvasWidth, Mode=OneWay}" Height="{x:Bind Path=CanvasHeight, Mode=OneWay}" HorizontalAlignment="Center" VerticalAlignment="Center" Background="White">
 
-            <Canvas x:Name="_canvas" Width="{x:Bind Path=CanvasWidth, Mode=OneWay}" Height="{x:Bind Path=CanvasHeight, Mode=OneWay}" HorizontalAlignment="Center" VerticalAlignment="Center" Background="White">
+            <Rectangle x:Name="_frame" Width="{x:Bind Path=FrameWidth, Mode=OneWay}" Height="{x:Bind Path=FrameHeight, Mode=OneWay}" Stroke="Aqua" Fill="Transparent" HorizontalAlignment="Center" VerticalAlignment="Center" />
 
-                <Ellipse x:Name="_ellipse" Canvas.Left="562" Canvas.Top="0" Stroke="Orange" Fill="LightSalmon" Width="562" Height="1218" />
-
-                <Rectangle x:Name="_rectangle" Canvas.Left="0" Canvas.Top="0" Stroke="Pink" Fill="LightPink" Width="281" Height="609" />
-
-            </Canvas>
-
-        </Grid>
+        </Canvas>
 
     </ScrollViewer>
 
