--- a/Source/Controls/WFCanvas.xaml
+++ b/Source/Controls/WFCanvas.xaml
@@ -13,7 +13,13 @@
 
         <Canvas x:Name="_canvas" Width="{x:Bind Path=CanvasWidth, Mode=OneWay}" Height="{x:Bind Path=CanvasHeight, Mode=OneWay}" HorizontalAlignment="Center" VerticalAlignment="Center" Background="White">
 
-            <Rectangle x:Name="_frame" Width="{x:Bind Path=FrameWidth, Mode=OneWay}" Height="{x:Bind Path=FrameHeight, Mode=OneWay}" Stroke="Aqua" Fill="Transparent" HorizontalAlignment="Center" VerticalAlignment="Center" />
+            <Canvas x:Name="_container" />
+
+            <Canvas x:Name="_HUD">
+
+                <Rectangle x:Name="_frame" Width="{x:Bind Path=FrameWidth, Mode=OneWay}" Height="{x:Bind Path=FrameHeight, Mode=OneWay}" Stroke="Black" Fill="Transparent" HorizontalAlignment="Center" VerticalAlignment="Center" StrokeThickness="2" />
+
+            </Canvas>
 
         </Canvas>
 
