--- a/Source/Controls/WFCanvas.xaml
+++ b/Source/Controls/WFCanvas.xaml
@@ -11,7 +11,13 @@
 
     <ScrollViewer x:Name="_scrollViewer" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalScrollBarVisibility="Auto" ZoomMode="Enabled" Background="LightGray">
 
-        <Canvas x:Name="_canvas" Width="{x:Bind Path=CanvasWidth, Mode=OneWay}" Height="{x:Bind Path=CanvasHeight, Mode=OneWay}" HorizontalAlignment="Center" VerticalAlignment="Center" Background="White">
+        <Canvas x:Name="_canvas" Width="{x:Bind Path=CanvasWidth, Mode=OneWay}" Height="{x:Bind Path=CanvasHeight, Mode=OneWay}" HorizontalAlignment="Center" VerticalAlignment="Center" Background="WhiteSmoke">
+
+            <Canvas>
+
+                <Rectangle x:Name="_frameBackground" Width="{x:Bind Path=FrameWidth, Mode=OneWay}" Height="{x:Bind Path=FrameHeight, Mode=OneWay}" Fill="White" HorizontalAlignment="Center" VerticalAlignment="Center" StrokeThickness="2" />
+
+            </Canvas>
 
             <Canvas x:Name="_container">
 
@@ -21,7 +27,7 @@
 
             <Canvas x:Name="_HUD">
 
-                <Rectangle x:Name="_frame" Width="{x:Bind Path=FrameWidth, Mode=OneWay}" Height="{x:Bind Path=FrameHeight, Mode=OneWay}" Stroke="Black" Fill="Transparent" HorizontalAlignment="Center" VerticalAlignment="Center" StrokeThickness="2" />
+                <Rectangle x:Name="_frameBorder" Width="{x:Bind Path=FrameWidth, Mode=OneWay}" Height="{x:Bind Path=FrameHeight, Mode=OneWay}" Stroke="Black" Fill="Transparent" HorizontalAlignment="Center" VerticalAlignment="Center" StrokeThickness="1" />
 
                 <local:WFTitleBox x:Name="_titleBox" Visibility="Collapsed" />
 
