--- a/Source/Controls/WFActionTip.xaml
+++ b/Source/Controls/WFActionTip.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="WireFrame.WFSizeBox"
+    x:Class="WireFrame.WFActionTip"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:WireFrame"
