added few dummy ellipses for testing

--- a/Source/Controls/WFCanvas.xaml
+++ b/Source/Controls/WFCanvas.xaml
@@ -21,7 +21,11 @@
 
             <Canvas x:Name="_container">
 
-                <Ellipse Stroke="BlueViolet" Fill="Violet" Width="100" Height="100" Canvas.Left="100" Canvas.Top="100"/>
+                <Ellipse Stroke="BlueViolet" Fill="Violet" Width="80" Height="100" Canvas.Left="1000" Canvas.Top="300"/>
+                <Ellipse Stroke="DarkOrange" Fill="Orange" Width="30" Height="50" Canvas.Left="1500" Canvas.Top="200"/>
+                <Ellipse Stroke="DeepPink" Fill="Pink" Width="120" Height="60" Canvas.Left="1200" Canvas.Top="800"/>
+                <Ellipse Stroke="Coral" Fill="DarkKhaki" Width="30" Height="30" Canvas.Left="1800" Canvas.Top="500"/>
+                <Ellipse Stroke="Cyan" Fill="DarkCyan" Width="60" Height="100" Canvas.Left="700" Canvas.Top="700"/>
 
             </Canvas>
 
